<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.google.step.finscholar</groupId>
  <artifactId>finscholar</artifactId>
  <version>1</version>
  <packaging>war</packaging>

  <properties>
    <!-- This project uses Java 8 -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <failOnMissingWebXml>false</failOnMissingWebXml>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-1.0-sdk</artifactId>
      <version>1.9.59</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>4.0.1</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.github.blutorange</groupId>
        <artifactId>closure-compiler-maven-plugin</artifactId>
        <version>2.17.0</version>
        <executions>
          <execution>
            <id>default-minify</id>
            <configuration>
              <!-- Set below to false before deploying. -->
              <closureCreateSourceMap>true</closureCreateSourceMap>
              <encoding>UTF-8</encoding>
              <includes>**/*.js</includes>
              <closureCompilationLevel>ADVANCED_OPTIMIZATIONS
              </closureCompilationLevel>
              <closureDependencyEntryPoints>file:finscholar/init.js
              </closureDependencyEntryPoints>
              <closureDependencyMode>PRUNE</closureDependencyMode>
              <closureLanguageIn>ECMASCRIPT6_TYPED</closureLanguageIn>
              <closureLanguageOut>ECMASCRIPT5_STRICT</closureLanguageOut>
              <outputFilename>bundle.min.js</outputFilename>
              <closureSourceMapLocationMappings>
                <closureSourceMapLocationMapping>
                  <name>js/</name>
                  <value>../../../src/main/webapp/js</value>
                </closureSourceMapLocationMapping>
              </closureSourceMapLocationMappings>
              <closureSourceMapName>bundle.min.map.js</closureSourceMapName>
            </configuration>
            <goals>
              <goal>minify</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
        </executions>
      </plugin>

      <!-- Provides `mvn package appengine:run` for local testing
           and `mvn package appengine:deploy` for deploying. -->
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>appengine-maven-plugin</artifactId>
        <version>2.2.0</version>
        <configuration>
          <deploy.projectId>viewing-step-2020-v2</deploy.projectId>
          <deploy.version>1</deploy.version>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>